feat: setup django, custom user model and profile     - setup virutal environment using pipenv     - setup django     - configure environment variables using python-dotenv     - create custom user model     - create profile model     - create a signal to auto create profile when new user is created     - configure media files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,17 @@ __pycache__/
 
 # C extensions
 *.so
+.env
+*/.env
+*/*/.env
+__pycache__
+*/__pycache__
+*/*/__pycache__
+*/*/*/__pycache__
+
+media
+*/media
+
 
 # Distribution / packaging
 .Python
